# data-juicer-agents

./: .gitignore  MANIFEST.in  README.md  README_ZH.md  pyproject.toml
.github/workflows/: deploy_sphinx_docs.yml  publish_pypi.yml  unittest.yml
data/: demo-dataset-images.jsonl
data_juicer_agents/: __init__.py  cli.py  session_cli.py
data_juicer_agents/adapters/: __init__.py
data_juicer_agents/adapters/agentscope/: __init__.py  schema_utils.py  tools.py
data_juicer_agents/capabilities/: __init__.py
data_juicer_agents/capabilities/apply/: __init__.py  service.py
data_juicer_agents/commands/: __init__.py  apply_cmd.py  dev_cmd.py  output_control.py  plan_cmd.py  retrieve_cmd.py  tool_cmd.py  vla_workflow_cmd.py
data_juicer_agents/core/: __init__.py
data_juicer_agents/tools/: __init__.py
data_juicer_agents/tui/: __init__.py  app.py  controller.py  event_adapter.py  models.py  noise_filter.py
data_juicer_agents/utils/: __init__.py  agentscope_logging.py  dj_config_bridge.py  llm_gateway.py  optional_deps.py  runtime_helpers.py  terminal_input.py
docs/: cli.md  cli_ZH.md  overview.md  overview_ZH.md  quick_start.md  quick_start_ZH.md  tools.md  tools_ZH.md  vla_runtime_isolation.md  vla_workflow_server_acceptance.md  导航VLA-Plan-Agent检查工具与变体规则.md  导航数据处理差异情况.txt
docs/sphinx_doc/source/: api.rst  (+5 more)
eval_cases/: v0.1_baseline.jsonl  v0.1_hard.jsonl  v0.1_run_smoke.jsonl
interactive_recipe/: README.md  README_ZH.md  app.py  copilot_client.py  requirements.txt  st_operator_pool.py
interactive_recipe/save/: op_pool_state.yaml
interactive_recipe/utils/: recipe_utils.py
qa-copilot/: DEMO.md  DEMO_ZH.md  README.md  README_ZH.md  agent_helper.py  app_deploy.py  operator_tools_adapter.py  prompts.py  session_logger.py  setup_server.sh
qa-copilot/test/: README.md  run_tests.py  single_query_test.py  test_cases.parquet
scripts/: setup_vla_data_runtime.sh.example  smoke_vla_react_fake_tools.py  vla_workflow_server_acceptance.sh
skills/data-juicer-agents-harness/: SKILL.md
tests/: test_apply_execution.py  test_cache_manager.py  test_dataset_probe.py  test_dev_command.py  test_dj_config_bridge.py  test_llm_gateway.py  test_op_retrieval.py  test_operator_catalog_tool.py  test_operator_info_tool.py  test_operator_registry.py  test_package_version.py  test_plan_command.py  test_plan_schema.py  test_plan_service.py  test_result_builder.py  test_retrieval_service.py  test_retrieve_command.py  test_security_fixes.py  test_session_agent.py  test_session_cli.py  test_system_spec_validation.py  test_tool_command.py  test_tool_contracts.py  test_tools_agentscope_binding.py  test_tui_app.py  test_tui_event_adapter.py  test_tui_noise_filter.py  test_tui_renderer.py  test_vla_annotation_tracking_tools.py  test_vla_extract_sync_tools.py  test_vla_finish_tools.py  test_vla_logging.py  test_vla_navigation_profile_tools.py  test_vla_navigation_samples_20270515_20270605.py  test_vla_prepare_gridmap_tools.py  test_vla_projection_validation_tools.py  test_vla_raw_tools.py  test_vla_registry_session.py  test_vla_runtime_helpers.py  test_vla_tool_capability_catalog.py  (+9 more)
(+287 files in other folders)
