[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-juicer-agents"
version = "0.0.3"
description = "A multi-agent data processing system built on AgentScope and Data-Juicer"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "DataJuicer Team" }]
requires-python = ">=3.10, <3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pydantic>=2,<3",
]

[project.scripts]
djx = "data_juicer_agents.cli:main"
dj-agents = "data_juicer_agents.session_cli:main"

[project.optional-dependencies]
core = [
    "agentscope==1.0.14",
    "openai",
    "prompt-toolkit>=3.0.36",
    "py-data-juicer>=1.5.1",
    "PyYAML",
    "rich>=13.7.0",
]
harness = [
    "openai",
    "py-data-juicer>=1.5.1",
    "PyYAML",
]
full = [
    "agentscope==1.0.14",
    "agentscope-runtime==1.0.5",
    "dashscope",
    "docstring-parser>=0.16",
    "emoji",
    "loguru",
    "matplotlib",
    "openai",
    "oyaml",
    "pandas",
    "prompt-toolkit>=3.0.36",
    "py-data-juicer>=1.5.1",
    "PyYAML",
    "redis",
    "requests",
    "rich>=13.7.0",
    "scipy",
    "socksio",
    "streamlit",
    "wordcloud",
]
copilot = [
    "agentscope==1.0.14",
    "agentscope-runtime==1.0.5",
    "dashscope",
    "loguru",
    "openai",
    "py-data-juicer>=1.5.1",
    "redis",
    "socksio",
]
interecipe = [
    "dashscope",
    "docstring-parser>=0.16",
    "emoji",
    "loguru",
    "matplotlib",
    "openai",
    "oyaml",
    "pandas",
    "py-data-juicer>=1.5.1",
    "PyYAML",
    "requests",
    "scipy",
    "streamlit",
    "wordcloud",
]
dev = [
    "agentscope==1.0.14",
    "agentscope-runtime==1.0.5",
    "black",
    "dashscope",
    "docstring-parser>=0.16",
    "emoji",
    "flake8",
    "loguru",
    "matplotlib",
    "mypy",
    "openai",
    "oyaml",
    "pandas",
    "prompt-toolkit>=3.0.36",
    "py-data-juicer>=1.5.1",
    "PyYAML",
    "pytest>=7,<8",
    "pytest-cov>=4",
    "redis",
    "requests",
    "rich>=13.7.0",
    "scipy",
    "socksio",
    "streamlit",
    "twine",
    "wordcloud",
]

[project.urls]
Homepage = "https://github.com/datajuicer/data-juicer-agents"
Repository = "https://github.com/datajuicer/data-juicer-agents"
Documentation = "https://github.com/datajuicer/data-juicer-agents#readme"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["data_juicer_agents*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
